objects/BuildingTarget__c.object
<CustomObject>
    <fields>
        <fullName>BuildingID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to building for which target is defined</description>
        <inlineHelpText>Reference to building for which target is defined</inlineHelpText>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>BuildingTargets</relationshipLabel>
        <relationshipName>BuildingTargets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Building_ID__c</fullName>
        <formula>BuildingID__r.Id</formula>
        <label>Building ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <description>Count of desks</description>
        <inlineHelpText>Target Number of desks</inlineHelpText>
        <label>Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <description>Date from which target is effective; Targets are defined for a month at WeWork</description>
        <inlineHelpText>Start of the month for which the Target will be effective</inlineHelpText>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <formula>BuildingID__r.Portfolio_Name__c</formula>
        <label>Portfolio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>BuildingID__r.Region_Name__c</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <inlineHelpText>indicates which segment this target is for
&gt;&gt;&gt;blank means global</inlineHelpText>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Mid Market</fullName>
                    <isActive>false</isActive>
                    <label>Mid Market</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Desk</fullName>
                    <default>true</default>
                    <label>Desk</label>
                </value>
                <value>
                    <fullName>Tour</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Target value of desks</description>
        <inlineHelpText>Targets value in currency</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <description>Targets for a building</description>
    <label>Building Target</label>
    <nameField>
        <label>Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BuildingTargets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BuildingID__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>Segment__c</columns>
        <columns>Count__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>